--- a/app/src/main/res/layout/fragment_c_sharp_comments_1.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_comments_1.xml
@@ -98,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="There are two types of comments in C#."
+            android:text="There are three types of comments in C#."
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -110,7 +110,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/p_the_types_of_comments"
+            android:text="@string/c_the_types_of_comments"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
